--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+/* body {
     margin: 0;
-    background-color: rgb(208, 255, 239);
-}
+    padding: 0;
+    
+} */
 
 .main-game {
     height: 100vh;
@@ -9,7 +10,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('assets/tetrisbackground.jpg');
+    background: url('assets/gifBack.gif');
+    display: grid;
+    margin: 0;
+    padding: 0;
+}
+
+.mediaPlayer {
+    background: rgba (0,0,0,0,4);
 }
 
 .genius {
@@ -29,24 +37,29 @@ body {
     grid-area: azul;
     background-color: blue;
     border-bottom-right-radius: 100%;
+    filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5));
 }
 
 .red {
     grid-area: vermelho;
     background-color: red;
     border-top-right-radius: 100%;
+    filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5));
 }
 
 .yellow {
     grid-area: amarelo;
     background-color: yellow;
     border-bottom-left-radius: 100%;
+    filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5));
 }
 
 .green {
     grid-area: verde;
     background-color: green;
     border-top-left-radius: 100%;
+    filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5));
+    boxshadow:2px 6px 6px black;
 }
 
 .selectedQuarter {
